--- a/src/main/java/GUI/GUI.form
+++ b/src/main/java/GUI/GUI.form
@@ -2198,6 +2198,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Koniec"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_zobrazenieSkupinyVoznov_koniecActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
